# AskPDF

pdf_processor/: .gitignore  Dockerfile  docker-compose.yml  main.py  messate.txt  publish_task.py  pyproject.toml  run_workder.sh
pdf_processor/app/: celery_app.py  config.py
pdf_processor/app/document_processing/: document_loader.py
pdf_processor/app/models/: embedder.py
pdf_processor/app/queue/: sqs.py
pdf_processor/app/store/: vector_store.py
pdf_processor/app/tasks/: process_pdf.py
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 10df7b4c8c09_initial_migrations.py  276449438b1a_set_conversation_id_to_nullable_in_.py  3bb2784c6d9c_change_document_fk_type.py  5f946f643fc8_create_users_table.py  62ed9ae73b28_update_tempdocument_and_document.py  87dfaca2da83_first_migration.py  8cbc66ec8f1c_fix_document_and_conversation_back_prop.py  95e2b5b3245b_conversation_models_migration.py  f97da895780f_create_users_table.py
server/app/: exception_handler.py  main.py
server/app/api/: api.py
server/app/api/conversation/: crud.py  models.py  rag.py  router.py  s3_service.py  schemas.py  services.py
server/app/api/document/: crud.py  models.py  router.py  s3_service.py  schemas.py  services.py
server/app/api/user/: crud.py  (+6 more)
server/app/core/: __init__.py  config.py  db.py  dependency.py  embedder.py  exceptions.py  llm.py  memory_db.py  models.py  schemas.py  vector_store.py
server/app/workers/: schemas.py  services.py  tasks.py
server/lambda/: dummyS3Event.json  template.yml
server/lambda/.aws-sam/: build.toml
(+58 files in other folders)
